ymltest/ingress_test/users-deploment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users
  labels:
    app: users
spec:
  replicas: 3
  selector:
    matchLabels:
      app: users
  template:
    metadata:
      labels:
        app: users
    spec:
      containers:
      - name: users
        image: docker.io/cloudrain21/hello-users:v1
        ports:
        - containerPort: 8080
