ymltest/ingress_test/product-svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-node-svc
spec:
  selector:
    app: product
  type: NodePort
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  externalTrafficPolicy: Cluster
