ymltest/ingress_test/users-svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-node-svc
spec:
  selector:
    app: users
  type: NodePort
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
